# Hikari

./: Cargo.toml  README.md  result.bpp
src/: camera.rs  color.rs  compute.glsl  hittable.rs  main.rs  material.rs  ray.rs  raytracer.rs  scene.rs  vec3.rs
