[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"
authors = ["Light7734"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbr = "1.0.4"
rand = "0.8.5"
vulkano = "0.32.0"
vulkano-shaders = "0.32.0"
vulkano-win = "0.32.0"
vulkano-util = "0.32.0"
display_json = "0.2.1"
serde_json = "1.0.91"

bytemuck =  "1.7"
cgmath = "0.18"
png = "0.17"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
glium = "0.32.1"

